style: box-sizing 적용을 위한 global.css 수정

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -191,7 +191,7 @@ table {
   border-spacing: 0;
   border-collapse: collapse;
 }
-body {
+* {
   box-sizing: border-box;
   letter-spacing: -0.05em;
 }
